--- a/src/pages/posts/the-website-performance-checklist/index.mdx
+++ b/src/pages/posts/the-website-performance-checklist/index.mdx
@@ -38,6 +38,8 @@ Montrer les différentes architectures pour une application web performante:
 - bundle splitting
 - tree shaking
 - Remove unused CSS (css-in-js can help with that)
+- [Dynamic imports](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Statements/import#dynamic_imports)
+- [Native modules](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Guide/Modules)
 
 ## Frontend Performance
 
